src/importer/conllu/snapshots/annatto__importer__conllu__tests__basic.snap
---
source: src/importer/conllu/tests.rs
expression: actual.unwrap()
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="node" attr.name="Case" attr.type="string"/>
    <key id="k1" for="node" attr.name="CustomFeature" attr.type="string"/>
    <key id="k2" for="node" attr.name="Number" attr.type="string"/>
    <key id="k3" for="node" attr.name="Person" attr.type="string"/>
    <key id="k4" for="node" attr.name="PronType" attr.type="string"/>
    <key id="k5" for="node" attr.name="SpaceAfter" attr.type="string"/>
    <key id="k6" for="node" attr.name="Tense" attr.type="string"/>
    <key id="k7" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k8" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k9" for="node" attr.name="lemma" attr.type="string"/>
    <key id="k10" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k11" for="node" attr.name="sent_id" attr.type="string"/>
    <key id="k12" for="node" attr.name="text" attr.type="string"/>
    <key id="k13" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k14" for="node" attr.name="upos" attr.type="string"/>
    <key id="k15" for="node" attr.name="xpos" attr.type="string"/>
    <key id="k16" for="node" attr.name="deprel" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <node id="valid">
            <data key="k10">corpus</data>
        </node>
        <node id="valid/website_example">
            <data key="k10">corpus</data>
            <data key="k7">website_example</data>
        </node>
        <node id="valid/website_example#t5">
            <data key="k0">Nom</data>
            <data key="k10">node</data>
            <data key="k13">They</data>
            <data key="k14">PRON</data>
            <data key="k15">PRP</data>
            <data key="k2">Plur</data>
            <data key="k8">default_layer</data>
            <data key="k9">they</data>
        </node>
        <node id="valid/website_example#t6">
            <data key="k10">node</data>
            <data key="k13">buy</data>
            <data key="k14">VERB</data>
            <data key="k15">VBP</data>
            <data key="k2">Plur</data>
            <data key="k3">3</data>
            <data key="k6">Pres</data>
            <data key="k8">default_layer</data>
            <data key="k9">buy</data>
        </node>
        <node id="valid/website_example#t7">
            <data key="k10">node</data>
            <data key="k13">and</data>
            <data key="k14">CONJ</data>
            <data key="k15">CC</data>
            <data key="k8">default_layer</data>
            <data key="k9">and</data>
        </node>
        <node id="valid/website_example#t8">
            <data key="k1">value with space</data>
            <data key="k10">node</data>
            <data key="k13">sell</data>
            <data key="k14">VERB</data>
            <data key="k15">VBP</data>
            <data key="k2">Plur</data>
            <data key="k3">3</data>
            <data key="k6">Pres</data>
            <data key="k8">default_layer</data>
            <data key="k9">sell</data>
        </node>
        <node id="valid/website_example#t9">
            <data key="k10">node</data>
            <data key="k13">books</data>
            <data key="k14">NOUN</data>
            <data key="k15">NNS</data>
            <data key="k2">Plur</data>
            <data key="k5">No</data>
            <data key="k8">default_layer</data>
            <data key="k9">book</data>
        </node>
        <node id="valid/website_example#t10">
            <data key="k10">node</data>
            <data key="k13">.</data>
            <data key="k14">PUNCT</data>
            <data key="k15">.</data>
            <data key="k8">default_layer</data>
            <data key="k9">.</data>
        </node>
        <node id="valid/website_example#s3">
            <data key="k10">node</data>
            <data key="k11">1</data>
            <data key="k12">They buy and sell books.</data>
        </node>
        <node id="valid/website_example#t14">
            <data key="k0">Nom</data>
            <data key="k10">node</data>
            <data key="k13">I</data>
            <data key="k14">PRON</data>
            <data key="k15">PRP</data>
            <data key="k2">Sing</data>
            <data key="k3">1</data>
            <data key="k8">default_layer</data>
            <data key="k9">I</data>
        </node>
        <node id="valid/website_example#t15">
            <data key="k10">node</data>
            <data key="k13">have</data>
            <data key="k14">VERB</data>
            <data key="k15">VBP</data>
            <data key="k2">Sing</data>
            <data key="k3">1</data>
            <data key="k6">Pres</data>
            <data key="k8">default_layer</data>
            <data key="k9">have</data>
        </node>
        <node id="valid/website_example#t16">
            <data key="k10">node</data>
            <data key="k13">no</data>
            <data key="k14">DET</data>
            <data key="k15">DT</data>
            <data key="k4">Neg</data>
            <data key="k8">default_layer</data>
            <data key="k9">no</data>
        </node>
        <node id="valid/website_example#t17">
            <data key="k10">node</data>
            <data key="k13">clue</data>
            <data key="k14">NOUN</data>
            <data key="k15">NN</data>
            <data key="k2">Sing</data>
            <data key="k5">No</data>
            <data key="k8">default_layer</data>
            <data key="k9">clue</data>
        </node>
        <node id="valid/website_example#t18">
            <data key="k10">node</data>
            <data key="k13">.</data>
            <data key="k14">PUNCT</data>
            <data key="k15">.</data>
            <data key="k8">default_layer</data>
            <data key="k9">.</data>
        </node>
        <node id="valid/website_example#s12">
            <data key="k10">node</data>
            <data key="k11">2</data>
            <data key="k12">I have no clue.</data>
        </node>
        <edge id="e0" source="valid/website_example#s3" target="valid/website_example#t5" label="Coverage/annis/">
        </edge>
        <edge id="e1" source="valid/website_example#s3" target="valid/website_example#t6" label="Coverage/annis/">
        </edge>
        <edge id="e2" source="valid/website_example#s3" target="valid/website_example#t7" label="Coverage/annis/">
        </edge>
        <edge id="e3" source="valid/website_example#s3" target="valid/website_example#t8" label="Coverage/annis/">
        </edge>
        <edge id="e4" source="valid/website_example#s3" target="valid/website_example#t9" label="Coverage/annis/">
        </edge>
        <edge id="e5" source="valid/website_example#s3" target="valid/website_example#t10" label="Coverage/annis/">
        </edge>
        <edge id="e6" source="valid/website_example#s12" target="valid/website_example#t14" label="Coverage/annis/">
        </edge>
        <edge id="e7" source="valid/website_example#s12" target="valid/website_example#t15" label="Coverage/annis/">
        </edge>
        <edge id="e8" source="valid/website_example#s12" target="valid/website_example#t16" label="Coverage/annis/">
        </edge>
        <edge id="e9" source="valid/website_example#s12" target="valid/website_example#t17" label="Coverage/annis/">
        </edge>
        <edge id="e10" source="valid/website_example#s12" target="valid/website_example#t18" label="Coverage/annis/">
        </edge>
        <edge id="e11" source="valid/website_example#t6" target="valid/website_example#t5" label="Pointing//dep">
            <data key="k16">nsubj</data>
        </edge>
        <edge id="e12" source="valid/website_example#t6" target="valid/website_example#t8" label="Pointing//dep">
            <data key="k16">conj</data>
        </edge>
        <edge id="e13" source="valid/website_example#t6" target="valid/website_example#t9" label="Pointing//dep">
            <data key="k16">obj</data>
        </edge>
        <edge id="e14" source="valid/website_example#t6" target="valid/website_example#t10" label="Pointing//dep">
            <data key="k16">punct</data>
        </edge>
        <edge id="e15" source="valid/website_example#t8" target="valid/website_example#t7" label="Pointing//dep">
            <data key="k16">cc</data>
        </edge>
        <edge id="e16" source="valid/website_example#t15" target="valid/website_example#t14" label="Pointing//dep">
            <data key="k16">nsubj</data>
        </edge>
        <edge id="e17" source="valid/website_example#t15" target="valid/website_example#t17" label="Pointing//dep">
            <data key="k16">obj</data>
        </edge>
        <edge id="e18" source="valid/website_example#t15" target="valid/website_example#t18" label="Pointing//dep">
            <data key="k16">punct</data>
        </edge>
        <edge id="e19" source="valid/website_example#t17" target="valid/website_example#t16" label="Pointing//dep">
            <data key="k16">det</data>
        </edge>
        <edge id="e20" source="valid/website_example#t8" target="valid/website_example#t5" label="Pointing/enh/dep">
            <data key="k16">nsubj</data>
        </edge>
        <edge id="e21" source="valid/website_example#t8" target="valid/website_example#t9" label="Pointing/enh/dep">
            <data key="k16">obj</data>
        </edge>
        <edge id="e22" source="valid/website_example#t5" target="valid/website_example#t6" label="Ordering/annis/">
        </edge>
        <edge id="e23" source="valid/website_example#t6" target="valid/website_example#t7" label="Ordering/annis/">
        </edge>
        <edge id="e24" source="valid/website_example#t7" target="valid/website_example#t8" label="Ordering/annis/">
        </edge>
        <edge id="e25" source="valid/website_example#t8" target="valid/website_example#t9" label="Ordering/annis/">
        </edge>
        <edge id="e26" source="valid/website_example#t9" target="valid/website_example#t10" label="Ordering/annis/">
        </edge>
        <edge id="e27" source="valid/website_example#t10" target="valid/website_example#t14" label="Ordering/annis/">
        </edge>
        <edge id="e28" source="valid/website_example#t14" target="valid/website_example#t15" label="Ordering/annis/">
        </edge>
        <edge id="e29" source="valid/website_example#t15" target="valid/website_example#t16" label="Ordering/annis/">
        </edge>
        <edge id="e30" source="valid/website_example#t16" target="valid/website_example#t17" label="Ordering/annis/">
        </edge>
        <edge id="e31" source="valid/website_example#t17" target="valid/website_example#t18" label="Ordering/annis/">
        </edge>
        <edge id="e32" source="valid/website_example" target="valid" label="PartOf/annis/">
        </edge>
        <edge id="e33" source="valid/website_example#t5" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e34" source="valid/website_example#t6" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e35" source="valid/website_example#t7" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e36" source="valid/website_example#t8" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e37" source="valid/website_example#t9" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e38" source="valid/website_example#t10" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e39" source="valid/website_example#s3" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e40" source="valid/website_example#t14" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e41" source="valid/website_example#t15" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e42" source="valid/website_example#t16" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e43" source="valid/website_example#t17" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e44" source="valid/website_example#t18" target="valid/website_example" label="PartOf/annis/">
        </edge>
        <edge id="e45" source="valid/website_example#s12" target="valid/website_example" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
