src/importer/conllu/snapshots/annatto__importer__conllu__tests__comments_and_sentence_annos.snap
---
source: src/importer/conllu/tests.rs
expression: actual.unwrap()
---
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="node" attr.name="Case" attr.type="string"/>
    <key id="k1" for="node" attr.name="Number" attr.type="string"/>
    <key id="k2" for="node" attr.name="Person" attr.type="string"/>
    <key id="k3" for="node" attr.name="PronType" attr.type="string"/>
    <key id="k4" for="node" attr.name="SpaceAfter" attr.type="string"/>
    <key id="k5" for="node" attr.name="Tense" attr.type="string"/>
    <key id="k6" for="node" attr.name="conll::comment" attr.type="string"/>
    <key id="k7" for="node" attr.name="annis::doc" attr.type="string"/>
    <key id="k8" for="node" attr.name="annis::layer" attr.type="string"/>
    <key id="k9" for="node" attr.name="lemma" attr.type="string"/>
    <key id="k10" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k11" for="node" attr.name="sent_id" attr.type="string"/>
    <key id="k12" for="node" attr.name="text" attr.type="string"/>
    <key id="k13" for="node" attr.name="annis::tok" attr.type="string"/>
    <key id="k14" for="node" attr.name="upos" attr.type="string"/>
    <key id="k15" for="node" attr.name="xpos" attr.type="string"/>
    <key id="k16" for="node" attr.name="deprel" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <node id="comments">
            <data key="k10">corpus</data>
        </node>
        <node id="comments/test">
            <data key="k10">corpus</data>
            <data key="k7">test</data>
        </node>
        <node id="comments/test#t7_1">
            <data key="k0">Nom</data>
            <data key="k1">Plur</data>
            <data key="k10">node</data>
            <data key="k13">They</data>
            <data key="k14">PRON</data>
            <data key="k15">PRP</data>
            <data key="k8">default_layer</data>
            <data key="k9">they</data>
        </node>
        <node id="comments/test#t7_68">
            <data key="k1">Plur</data>
            <data key="k10">node</data>
            <data key="k13">buy</data>
            <data key="k14">VERB</data>
            <data key="k15">VBP</data>
            <data key="k2">3</data>
            <data key="k5">Pres</data>
            <data key="k8">default_layer</data>
            <data key="k9">buy</data>
        </node>
        <node id="comments/test#t8_67">
            <data key="k10">node</data>
            <data key="k13">and</data>
            <data key="k14">CONJ</data>
            <data key="k15">CC</data>
            <data key="k8">default_layer</data>
            <data key="k9">and</data>
        </node>
        <node id="comments/test#t9_32">
            <data key="k1">Plur</data>
            <data key="k10">node</data>
            <data key="k13">sell</data>
            <data key="k14">VERB</data>
            <data key="k15">VBP</data>
            <data key="k2">3</data>
            <data key="k5">Pres</data>
            <data key="k8">default_layer</data>
            <data key="k9">sell</data>
        </node>
        <node id="comments/test#t10_76">
            <data key="k1">Plur</data>
            <data key="k10">node</data>
            <data key="k13">books</data>
            <data key="k14">NOUN</data>
            <data key="k15">NNS</data>
            <data key="k4">No</data>
            <data key="k8">default_layer</data>
            <data key="k9">book</data>
        </node>
        <node id="comments/test#t11_66">
            <data key="k10">node</data>
            <data key="k13">.</data>
            <data key="k14">PUNCT</data>
            <data key="k15">.</data>
            <data key="k8">default_layer</data>
            <data key="k9">.</data>
        </node>
        <node id="comments/test#s1_1">
            <data key="k10">node</data>
            <data key="k11">1</data>
            <data key="k12">They buy and sell books.</data>
            <data key="k6">this is just a comment
it has two lines, what are you going to do about it?!</data>
        </node>
        <node id="comments/test#t16_13">
            <data key="k0">Nom</data>
            <data key="k1">Sing</data>
            <data key="k10">node</data>
            <data key="k13">I</data>
            <data key="k14">PRON</data>
            <data key="k15">PRP</data>
            <data key="k2">1</data>
            <data key="k8">default_layer</data>
            <data key="k9">I</data>
        </node>
        <node id="comments/test#t17_57">
            <data key="k1">Sing</data>
            <data key="k10">node</data>
            <data key="k13">have</data>
            <data key="k14">VERB</data>
            <data key="k15">VBP</data>
            <data key="k2">1</data>
            <data key="k5">Pres</data>
            <data key="k8">default_layer</data>
            <data key="k9">have</data>
        </node>
        <node id="comments/test#t18_64">
            <data key="k10">node</data>
            <data key="k13">no</data>
            <data key="k14">DET</data>
            <data key="k15">DT</data>
            <data key="k3">Neg</data>
            <data key="k8">default_layer</data>
            <data key="k9">no</data>
        </node>
        <node id="comments/test#t19_38">
            <data key="k1">Sing</data>
            <data key="k10">node</data>
            <data key="k13">clue</data>
            <data key="k14">NOUN</data>
            <data key="k15">NN</data>
            <data key="k4">No</data>
            <data key="k8">default_layer</data>
            <data key="k9">clue</data>
        </node>
        <node id="comments/test#t20_54">
            <data key="k10">node</data>
            <data key="k13">.</data>
            <data key="k14">PUNCT</data>
            <data key="k15">.</data>
            <data key="k8">default_layer</data>
            <data key="k9">.</data>
        </node>
        <node id="comments/test#s12_34">
            <data key="k10">node</data>
            <data key="k11">2</data>
            <data key="k12">I have no clue.</data>
            <data key="k6">TODO: read</data>
        </node>
        <edge id="e0" source="comments/test#s1_1" target="comments/test#t7_1" label="Coverage/annis/">
        </edge>
        <edge id="e1" source="comments/test#s1_1" target="comments/test#t7_68" label="Coverage/annis/">
        </edge>
        <edge id="e2" source="comments/test#s1_1" target="comments/test#t8_67" label="Coverage/annis/">
        </edge>
        <edge id="e3" source="comments/test#s1_1" target="comments/test#t9_32" label="Coverage/annis/">
        </edge>
        <edge id="e4" source="comments/test#s1_1" target="comments/test#t10_76" label="Coverage/annis/">
        </edge>
        <edge id="e5" source="comments/test#s1_1" target="comments/test#t11_66" label="Coverage/annis/">
        </edge>
        <edge id="e6" source="comments/test#s12_34" target="comments/test#t16_13" label="Coverage/annis/">
        </edge>
        <edge id="e7" source="comments/test#s12_34" target="comments/test#t17_57" label="Coverage/annis/">
        </edge>
        <edge id="e8" source="comments/test#s12_34" target="comments/test#t18_64" label="Coverage/annis/">
        </edge>
        <edge id="e9" source="comments/test#s12_34" target="comments/test#t19_38" label="Coverage/annis/">
        </edge>
        <edge id="e10" source="comments/test#s12_34" target="comments/test#t20_54" label="Coverage/annis/">
        </edge>
        <edge id="e11" source="comments/test#t7_68" target="comments/test#t7_1" label="Pointing//dep">
            <data key="k16">nsubj</data>
        </edge>
        <edge id="e12" source="comments/test#t7_68" target="comments/test#t9_32" label="Pointing//dep">
            <data key="k16">conj</data>
        </edge>
        <edge id="e13" source="comments/test#t7_68" target="comments/test#t10_76" label="Pointing//dep">
            <data key="k16">obj</data>
        </edge>
        <edge id="e14" source="comments/test#t7_68" target="comments/test#t11_66" label="Pointing//dep">
            <data key="k16">punct</data>
        </edge>
        <edge id="e15" source="comments/test#t9_32" target="comments/test#t8_67" label="Pointing//dep">
            <data key="k16">cc</data>
        </edge>
        <edge id="e16" source="comments/test#t17_57" target="comments/test#t16_13" label="Pointing//dep">
            <data key="k16">nsubj</data>
        </edge>
        <edge id="e17" source="comments/test#t17_57" target="comments/test#t19_38" label="Pointing//dep">
            <data key="k16">obj</data>
        </edge>
        <edge id="e18" source="comments/test#t17_57" target="comments/test#t20_54" label="Pointing//dep">
            <data key="k16">punct</data>
        </edge>
        <edge id="e19" source="comments/test#t19_38" target="comments/test#t18_64" label="Pointing//dep">
            <data key="k16">det</data>
        </edge>
        <edge id="e20" source="comments/test#t9_32" target="comments/test#t7_1" label="Pointing/enh/dep">
            <data key="k16">nsubj</data>
        </edge>
        <edge id="e21" source="comments/test#t9_32" target="comments/test#t10_76" label="Pointing/enh/dep">
            <data key="k16">obj</data>
        </edge>
        <edge id="e22" source="comments/test#t7_1" target="comments/test#t7_68" label="Ordering/annis/">
        </edge>
        <edge id="e23" source="comments/test#t7_68" target="comments/test#t8_67" label="Ordering/annis/">
        </edge>
        <edge id="e24" source="comments/test#t8_67" target="comments/test#t9_32" label="Ordering/annis/">
        </edge>
        <edge id="e25" source="comments/test#t9_32" target="comments/test#t10_76" label="Ordering/annis/">
        </edge>
        <edge id="e26" source="comments/test#t10_76" target="comments/test#t11_66" label="Ordering/annis/">
        </edge>
        <edge id="e27" source="comments/test#t11_66" target="comments/test#t16_13" label="Ordering/annis/">
        </edge>
        <edge id="e28" source="comments/test#t16_13" target="comments/test#t17_57" label="Ordering/annis/">
        </edge>
        <edge id="e29" source="comments/test#t17_57" target="comments/test#t18_64" label="Ordering/annis/">
        </edge>
        <edge id="e30" source="comments/test#t18_64" target="comments/test#t19_38" label="Ordering/annis/">
        </edge>
        <edge id="e31" source="comments/test#t19_38" target="comments/test#t20_54" label="Ordering/annis/">
        </edge>
        <edge id="e32" source="comments/test" target="comments" label="PartOf/annis/">
        </edge>
        <edge id="e33" source="comments/test#t7_1" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e34" source="comments/test#t7_68" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e35" source="comments/test#t8_67" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e36" source="comments/test#t9_32" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e37" source="comments/test#t10_76" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e38" source="comments/test#t11_66" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e39" source="comments/test#s1_1" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e40" source="comments/test#t16_13" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e41" source="comments/test#t17_57" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e42" source="comments/test#t18_64" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e43" source="comments/test#t19_38" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e44" source="comments/test#t20_54" target="comments/test" label="PartOf/annis/">
        </edge>
        <edge id="e45" source="comments/test#s12_34" target="comments/test" label="PartOf/annis/">
        </edge>
    </graph>
</graphml>
