src/importer/conllu/snapshots/annatto__importer__conllu__tests__conll_fail_invalid-2.snap
---
source: src/importer/conllu/tests.rs
expression: run.err().unwrap()
---
Could not parse "tests/data/import/conll/invalid/test_file.conllu":
 --> 1:1
  |
1 | a	_
  | ^---
  |
  = expected sentence
