src/importer/conllu/snapshots/annatto__importer__conllu__tests__conll_fail_invalid_heads.snap
---
source: src/importer/conllu/tests.rs
expression: job.err().unwrap()
---
Error during importing corpus to invalid-heads/test_file with "import_conllu": "Failed to build dependency tree: Unknown head id `9` (1, 1)"
